spec/data/mockDefs/invalid/return/mockDefInvalidExport.js
'use strict';

module.exports = function(server, options) {
  return ['not a valid endpoint definition'];
};
